Display Tello version, region, SSID. It can not be changed.

--- a/TelloTest/en.lproj/Localizable.strings
+++ b/TelloTest/en.lproj/Localizable.strings
@@ -17,6 +17,9 @@
 "Succeeded" = "Succeeded";
 "CurrentAltFormat" = "Current Altitude Limit:%@";
 "UpdateSucceeded" = "Update succeeded.";
+"Region" = "Region:%@";
+"Version" = "Tello's Version:%@";
+"SSID" = "SSID:%@";
 
 "FaultGetAlt" = "Fault get current altitude.";
 "SuccessConnect" = "Successfully connected to Tello:";
